# spaceinvaders

./: .gitignore  .gitmodules  CMakeLists.txt  build_windows.sh  cmake-gen.bat
scripts/: genie.lua
src/: Game.cpp  Game.h  main.cpp
src/ecs/: AnimationSystem.cpp  AnimationSystem.h  Components.h  ConfineInScreenSystem.cpp  ConfineInScreenSystem.h  DestroyOnExitScreen.cpp  DestroyOnExitScreen.h  DieSystem.cpp  DieSystem.h  ECSGUIWorld.cpp  ECSGUIWorld.h  ECSWorld.cpp  ECSWorld.h  GrowOnSpawnSystem.cpp  GrowOnSpawnSystem.h  HadronCollisionSystem.h  HealthSystem.cpp  HealthSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  PlayerSeekerBehaviourSystem.cpp  PlayerSeekerBehaviourSystem.h  RenderTextSystem.cpp  RenderTextSystem.h  RenderTextureSystem.cpp  RenderTextureSystem.h  ShootingSystem.cpp  ShootingSystem.h  SinusoidalEnemyBehaviourSystem.cpp  SinusoidalEnemyBehaviourSystem.h  StandAtPointBehaviourSystem.cpp  StandAtPointBehaviourSystem.h  StarsFieldSystem.cpp  StarsFieldSystem.h  Systems.cpp  Systems.h
src/screens/: GameplayScreen.cpp  GameplayScreen.h  MenuScreen.cpp  MenuScreen.h
vsproj/: SpaceInvaders.sln  SpaceInvaders.vcxproj  SpaceInvaders.vcxproj.filters
